--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
       <button type="submit">Sign In</button>
       <p>Already have an Account?
-        <a href="login.html">Login</a>
+        <a href="Login.html">Login</a>
       </p>
     </form>
   </div>
